# talk-to-me

./: .gitignore  pyproject.toml
bench/: __init__.py  tracker.py
server/: main.py
server/classifier/: bert.py  gemini.py
server/crm/: client.py  toon.py
server/crm/mock/: api.py  queries.py
server/fsm/: engine.py  runbooks.py
server/models/: schemas.py
server/session/: state.py
server/signals/: logger.py
server/verifier/: verify.py
voice/: agent.py
