[project]
name = "talk-to-me"
version = "0.1.0"
description = "Business Intelligence for your Voice AI Orchestration"
requires-python = ">=3.14"
dependencies = [
    "deepgram-sdk>=3.0.0",
    "duckdb>=1.5.2",
    "elevenlabs>=1.0.0",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-toon>=0.1.0",
    "rich>=13.0.0",
    "transformers>=4.50.0",
    "torch>=2.5.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "talk-to-me",
]

[tool.fastapi]
entrypoint = "server.main:app"
